--- a/src/main/resources/templates/word_detail.html
+++ b/src/main/resources/templates/word_detail.html
@@ -2,39 +2,35 @@
 <html lang="ja" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>全単語一覧</title>
+<title>単語の詳細</title>
 </head>
 <body>
-	<h1>全単語一覧</h1>
+	<h1>単語名：</h1>
+	<p>読み方：[[*{pronunciation}]]</p>
 	
 	<table border="1">
-		<thead>
+		
 			<tr>
-				<th>辞典名</th>
-				<th>単語</th>
-				<th>読み方</th>
-				<th>シンプル意味</th>
-				<th>登録日時</th>
-				<th>更新日時</th>
-				<th>閲覧回数</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr th:each="word : ${wordList}" th:object="${word}">
+				<th>登録している辞典</th>
 				<td>[[*{dictionaryType}]]</td>
-				<td>
-					<a th:href="@{/{id}/{name}(id=*{id}, name=*{name})}">
-						[[*{name}]]
-					</a>
-				</td>
-				<td>[[*{pronunciation}]]</td>
-				<td>[[*{simpleDescription}]]</td>
-				<td>[[*{#temporals.format(registeredAt, 'yyyy/MM/dd HH:mm:ss')}]]</td>
-				<td>[[*{#temporals.format(registeredAt, 'yyyy/MM/dd HH:mm:ss')}]]</td>
-				<td>[[*{pageViews}]]</td>
+				
 			</tr>
-		</tbody>	
+			<tr>
+				<th>シンプル意味</th>
+				<td>[[*{simpleDescription}]]</td>
+				
+			</tr>
+			<tr>
+				<th>詳細</th>
+				<td>[[*{detailDescription}]]</td>
+				
+			</tr>
+			
+
 	</table>
+				<p>[[*{#temporals.format(registeredAt, 'yyyy/MM/dd HH:mm:ss')}]]</p>
+				<p>[[*{#temporals.format(registeredAt, 'yyyy/MM/dd HH:mm:ss')}]]</p>
+				<p>[[*{pageViews}]]</p>	
 
 </body>
 </html>
