《修正》リクエストパラメーターの受け取り

--- a/src/main/resources/templates/all_words.html
+++ b/src/main/resources/templates/all_words.html
@@ -34,7 +34,7 @@
 			<tr th:each="word : ${wordList}" th:object="${word}">
 				<td>[[*{dictionaryType}]]</td>
 				<td>
-					<a th:href="@{/{id}/{name}(id=*{id}, name=*{name})}">
+					<a th:href="@{/words/{id}/{name}(id=*{id}, name=*{name})}">
 						[[*{name}]]
 					</a>
 				</td>
