--- a/src/main/resources/templates/word_detail.html
+++ b/src/main/resources/templates/word_detail.html
@@ -28,9 +28,9 @@
 			
 
 	</table>
-				<p>[[*{#temporals.format(registeredAt, 'yyyy/MM/dd HH:mm:ss')}]]</p>
-				<p>[[*{#temporals.format(registeredAt, 'yyyy/MM/dd HH:mm:ss')}]]</p>
-				<p>[[*{pageViews}]]</p>	
+				<p>[[*{#temporals.format(registeredAt, 'yyyy/MM/dd HH:mm:ss')}]]登録</p>
+				<p>[[*{#temporals.format(registeredAt, 'yyyy/MM/dd HH:mm:ss')}]]更新</p>
+				<p>[[*{pageViews}]]回閲覧</p>	
 
 </body>
 </html>
