--- a/src/main/resources/templates/word_detail.html
+++ b/src/main/resources/templates/word_detail.html
@@ -24,7 +24,7 @@
 			
 				<tr>
 					<th>登録している辞典</th>
-					<td>[[*{dictionaryType}]]</td>
+					<td>（準備中）[[*{dictionaryType}]]</td>
 					
 				</tr>
 				<tr>
