--- a/src/main/resources/templates/word_detail.html
+++ b/src/main/resources/templates/word_detail.html
@@ -40,8 +40,9 @@
 				
 	
 		</table>
-					<p>[[*{#temporals.format(registeredAt, 'yyyy/MM/dd HH:mm:ss')}]]登録</p>
-					<p>[[*{#temporals.format(registeredAt, 'yyyy/MM/dd HH:mm:ss')}]]更新</p>
+					<p>単語登録日：[[*{#temporals.format(registeredAt, 'yyyy/MM/dd HH:mm:ss')}]]</p>
+					<p>更新日：[[*{#temporals.format(registeredAt, 'yyyy/MM/dd HH:mm:ss')}]]</p>
+					<p>最終閲覧日[[*{#temporals.format(lastViewAt, 'yyyy/MM/dd HH:mm:ss')}]]</p>
 					<p>[[*{pageViews}]]回閲覧</p>
 	</th:block>	
 	<p><a th:href="@{/words}">一覧に戻る</a></p>
