《修正》詳細な意味の項目名をすべてのファイルで変更

--- a/src/main/resources/templates/word_detail.html
+++ b/src/main/resources/templates/word_detail.html
@@ -34,7 +34,7 @@
 				</tr>
 				<tr>
 					<th>詳細</th>
-					<td>[[*{detailDescription}]]</td>
+					<td>[[*{detailedDescription}]]</td>
 					
 				</tr>
 				
@@ -42,7 +42,7 @@
 		</table>
 					<p>単語登録日：[[*{#temporals.format(registeredAt, 'yyyy/MM/dd HH:mm:ss')}]]</p>
 					<p>更新日：[[*{#temporals.format(registeredAt, 'yyyy/MM/dd HH:mm:ss')}]]</p>
-					<p>最終閲覧日[[*{#temporals.format(lastViewAt, 'yyyy/MM/dd HH:mm:ss')}]]</p>
+					<p>最終閲覧日:[[*{#temporals.format(lastViewAt, 'yyyy/MM/dd HH:mm:ss')}]]</p>
 					<p>[[*{pageViews}]]回閲覧</p>
 	</th:block>	
 	<p><a th:href="@{/words}">一覧に戻る</a></p>
