《修正》詳細項目に参照項目を追加

--- a/src/main/resources/templates/word_detail.html
+++ b/src/main/resources/templates/word_detail.html
@@ -43,8 +43,15 @@
 				<tr>
 					<th>詳細</th>
 					<td>[[*{detailedDescription}]]</td>
-					
 				</tr>
+				<tr>
+					<th>参照</th>
+					<td>
+						<a th:href="*{referenceUrl}">[[*{referenceUrl}]]</a>
+					</td>
+				</tr>
+
+				
 				
 	
 		</table>
