--- a/src/main/resources/templates/all_words.html
+++ b/src/main/resources/templates/all_words.html
@@ -3,16 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>全単語一覧</title>
-<!--  仮　　-->
-<style>
-        h1 {
-            display: flex;
-            align-items: baseline; /* Baseline alignment to keep text inline */
-        }
-        h1 small {
-            font-size: 0.5em; /* Adjust the size to be smaller */
-        }
-    </style>
+
+<link rel="stylesheet" th:href="@{/css/style.css}">
    
 </head>
 <body>
