《修正》一覧ページ：URLマッピング変更に対応

--- a/src/main/resources/templates/all_words.html
+++ b/src/main/resources/templates/all_words.html
@@ -46,7 +46,7 @@
 				</th:block>
 				</td>
 				<td>
-					<a th:href="@{/words/{id}/{name}(id=*{id}, name=*{name})}">
+					<a th:href="@{/mydictionary/show/word{id}/{name}(id=*{id}, name=*{name})}">
 						[[*{name}]]
 					</a>
 				</td>
