《修正》単語の詳細ページ：一覧に戻るのURL指定の変更

--- a/src/main/resources/templates/word_detail.html
+++ b/src/main/resources/templates/word_detail.html
@@ -60,7 +60,7 @@
 					<p>最終閲覧日:[[*{#temporals.format(lastViewAt, 'yyyy/MM/dd HH:mm:ss')}]]</p>
 					<p>[[*{pageViews}]]回閲覧</p>
 	</th:block>	
-	<p><a th:href="@{/words}">一覧に戻る</a></p>
+	<p><a th:href="@{/mydictionary/show/all}">一覧に戻る</a></p>
 
 </body>
 </html>
