《修正》単語一覧ページ：単語更新処理にフラッシュメッセージを追加

--- a/src/main/resources/templates/all_words.html
+++ b/src/main/resources/templates/all_words.html
@@ -10,9 +10,11 @@
 <body>
     <h1>全単語一覧<small>Version0.6</small></h1>
 
-    <p><a th:href="@{/mydictionary/word/edit-form}">新しい単語を追加する</a></p> <!-- 新規単語追加ページへのリンク -->
+    <p><a th:href="@{/mydictionary/word/edit}">新しい単語を追加する</a></p> <!-- 新規単語追加ページへのリンク -->
     <hr>
     <br>
+    
+    <h2 th:if="${statusMessage}">[[${statusMessage}]]</h2>
     
     <table border="1">
         <thead>
