《修正》単語の閲覧回数、更新日時が正しく動作するよう修正

--- a/src/main/resources/templates/all_words.html
+++ b/src/main/resources/templates/all_words.html
@@ -47,7 +47,7 @@
                 <td>[[*{pronunciation}]]</td>
                 <td>[[*{simpleDescription}]]</td>
                 <td>[[*{#temporals.format(registeredAt, 'yyyy/MM/dd HH:mm')}]]</td>
-                <td>[[*{#temporals.format(registeredAt, 'yyyy/MM/dd HH:mm')}]]</td>
+                <td>[[*{#temporals.format(updatedAt, 'yyyy/MM/dd HH:mm')}]]</td>
                 <td>[[*{#temporals.format(lastViewAt, 'yyyy/MM/dd HH:mm')}]]</td>
                 <td>[[*{pageViews}]]</td>
                 <td>
