--- a/src/main/resources/templates/all_words.html
+++ b/src/main/resources/templates/all_words.html
@@ -10,7 +10,7 @@
 <body>
     <h1>全単語一覧<small>Version0.6</small></h1>
 
-    <p><a th:href="@{/mydictionary/word/edit}">新しい単語を追加する</a></p> <!-- 新規単語追加ページへのリンク -->
+    <p><a th:href="@{/mydictionary/word/add}">新しい単語を追加する</a></p> <!-- 新規単語追加ページへのリンク -->
     <hr>
     <br>
     
