《修正》単語一覧ページ：各辞典ごとの登録単語数を表示できるように変更

--- a/src/main/resources/templates/all_words.html
+++ b/src/main/resources/templates/all_words.html
@@ -12,8 +12,22 @@
 
     <p><a th:href="@{/mydictionary/word/add}">新しい単語を追加する</a></p> <!-- 新規単語追加ページへのリンク -->
     <hr>
-    
-    <h2 th:if="${statusMessage}">[[${statusMessage}]]</h2>
+
+	<ul>
+		<li>単語登録数：1600語
+			<ul>
+			<li th:each="dict : ${dictList}" th:object="${dict}">
+			[[*{name}]]辞典:[[*{wordAmount}]]語
+			</li>
+<!-- 				<li　>英単語辞典：3語</li>
+				<li>日本語辞典：1,500語</li>
+				<li>コーディング用語辞典：5語</li>
+				<li>その他辞典：1語</li> -->
+			</ul>
+		</li>
+	</ul>
+	
+	<h2 th:if="${statusMessage}">[[${statusMessage}]]</h2>
     
     <table border="1">
         <thead>
