《修正》単語一覧ページ：辞典の新規登録フォームへのリンクを生成

--- a/src/main/resources/templates/all_words.html
+++ b/src/main/resources/templates/all_words.html
@@ -10,7 +10,10 @@
 <body>
     <h1>全単語一覧<small>Version0.6</small></h1>
 
-    <p><a th:href="@{/mydictionary/word/add}">新しい単語を追加する</a></p> <!-- 新規単語追加ページへのリンク -->
+    <p>
+    	<a th:href="@{/mydictionary/dictionary/add}">新しい辞典を追加する</a>／
+		<a th:href="@{/mydictionary/word/add}">新しい単語を追加する</a>
+    </p>
     <hr>
 
 	<p>単語登録数：[[${totalWords}]]語</p>
