《修正》単語の新規登録画面：辞書チェックを必須ではない仕様に変更

--- a/src/main/resources/templates/edit/add_word_form.html
+++ b/src/main/resources/templates/edit/add_word_form.html
@@ -69,7 +69,8 @@
                     <td><input type="text" th:field="*{referenceUrl}" th:placeholder="'ここに登録したいURLを入力してください。※1～50文字以内'" maxlength="50" /></td>
                 </tr>
             </table>
-            <input type="submit" onclick="return validateCheckboxes()" value="登録">
+            <!-- <input type="submit" onclick="return validateCheckboxes()" value="登録"> -->
+            <input type="submit" value="登録">
         </form>
 
     </th:block>
