《修正》単語一覧ページ：辞典のリンクをなしに

--- a/src/main/resources/templates/all_words.html
+++ b/src/main/resources/templates/all_words.html
@@ -60,9 +60,13 @@
                 <td>
                     <th:block  th:each="registeredDict : *{registeredDictList}">
                         <p>
+							<!--/未実装
                             <a th:href="@{/dictionary(id=${registeredDict.id})}">
+							/-->
                                 [[${registeredDict.name}]]
+                            <!--/未実装
                             </a>
+                            /-->
                         </p>    
                     </th:block>
                 </td>
