《修正》単語詳細ページ：読み方情報がない場合、読み方を非表示にする

--- a/src/main/resources/templates/word_detail.html
+++ b/src/main/resources/templates/word_detail.html
@@ -7,7 +7,12 @@
 </head>
 <body>
 	<th:block th:object=${word}>
-		<h1>[[*{name}]]<small>(読み方：[[*{pronunciation}]])</small></h1>
+		<h1>[[*{name}]]
+			<small th:if="*{pronunciation} != null and *{pronunciation} != ''">
+			(読み方：[[*{pronunciation}]])
+			</small>
+
+		</h1>
 		<hr>
 		
 		<br>
