--- a/src/main/resources/templates/all_words.html
+++ b/src/main/resources/templates/all_words.html
@@ -12,9 +12,8 @@
     <h1>全単語一覧<small>Version2.0</small></h1>
 	<!--/*********************************************************************************************/-->
 
-	<p>
-		ログインユーザー: <span th:text="${session.user.userName}">Default User
-			Name</span>
+ 	<p>
+		ログインユーザー: <span th:text="${session.user.userName}">Default UserName</span>
 	</p>
 
 	<!-- ログアウトボタン -->
