--- a/src/main/resources/templates/edit/add_dictionary_form.html
+++ b/src/main/resources/templates/edit/add_dictionary_form.html
@@ -10,7 +10,7 @@
     <h1>---[[${pageTitle}]]---</h1>
 
     <th:block th:object="${dictionary}">
-        <form th:action="@{/mydictionary/dictionary/add}" method="post">
+        <form th:action="@{/mysyoko/dictionary/add}" method="post">
         <!-- <form th:action="@{/mydictionary/word/confirm(id=*{id}, name=*{name})}" method="get"> -->
         
         
@@ -44,7 +44,7 @@
 
     </th:block>
     <p>
-        <a th:href="@{/mydictionary/show/all}">一覧に戻る</a>
+        <a th:href="@{/myshoko/show/allwords}">一覧に戻る</a>
     </p>
 
 </body>
