--- a/src/main/resources/templates/all_words.html
+++ b/src/main/resources/templates/all_words.html
@@ -23,8 +23,8 @@
 	
 	<!--/*********　新しい辞典と単語を追加するためのリンク ****************************************************/-->
     <p>
-    	<a th:href="@{/mydictionary/dictionary/add}">新しい辞典を追加する</a>／
-		<a th:href="@{/mydictionary/word/add}">新しい単語を追加する</a>
+    	<a th:href="@{/myshoko/category/add}">新しいカテゴリを追加する</a>／
+		<a th:href="@{/myshoko/word/add}">新しい単語を追加する</a>
     </p>
 	<!--/********************************************************************************************/-->
     
@@ -41,10 +41,10 @@
 			<th:block th:if="*{id != 99}">
 				[[${status.index + 1}]].[[*{name}]]辞典:[[*{wordAmount}]]語
 				
-	            <a th:href="@{/mydictionary/dictionary/edit(id=*{id})}">辞典名変更</a> <!-- 編集ボタン -->
+	            <a th:href="@{/myshoko/dictionary/edit(id=*{id})}">辞典名変更</a> <!-- 編集ボタン -->
 	            ／
 	            <a 
-					th:href="@{/mydictionary/dictionary/delete(id=*{id})}" 
+					th:href="@{/myshoko/dictionary/delete(id=*{id})}" 
 		            onclick="return confirm('この辞典を削除してもよろしいですか？\n※登録している辞典がなくなる単語は「未分類」にカテゴライズされます。')"
 	            >削除
 	            </a> <!-- 削除ボタン -->
@@ -89,7 +89,7 @@
                     </th:block>
                 </td>
                 <td>
-                    <a th:href="@{/mydictionary/show/word{id}/{name}(id=*{id}, name=*{name})}">
+                    <a th:href="@{/myshoko/show/word{id}/{name}(id=*{id}, name=*{name})}">
                         [[*{name}]]
                     </a>
                 </td>
@@ -100,9 +100,9 @@
                 <td>[[*{#temporals.format(lastViewAt, 'yyyy/MM/dd HH:mm')}]]</td>
                 <td>[[*{pageViews}]]</td>
                 <td>
-                    <a th:href="@{/mydictionary/word/edit(id=*{id})}">編集</a> <!-- 編集ボタン -->
+                    <a th:href="@{/myshoko/word/edit(id=*{id})}">編集</a> <!-- 編集ボタン -->
                     <a 
-	                    th:href="@{/mydictionary/word/delete(id=*{id})}" 
+	                    th:href="@{/myshoko/word/delete(id=*{id})}" 
 	                    onclick="return confirm('削除してもよろしいですか？')"
                     >削除</a> <!-- 削除ボタン -->
                 </td>
