--- a/src/main/resources/templates/word_detail.html
+++ b/src/main/resources/templates/word_detail.html
@@ -56,7 +56,7 @@
 					<p>最終閲覧日:[[*{#temporals.format(lastViewAt, 'yyyy/MM/dd HH:mm:ss')}]]</p>
 					<p>[[*{pageViews}]]回閲覧</p>
 	</th:block>	
-	<p><a th:href="@{/mydictionary/show/all}">一覧に戻る</a></p>
+	<p><a th:href="@{/myshoko/show/allwords}">一覧に戻る</a></p>
 
 </body>
 </html>
