--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="login-container">
-        <h2>My辞典</h2>
+        <h2>My辞典ず</h2>
         <p th:if="${errorMessage}">[[${errorMessage}]]</p>
         <form th:action="@{/login}" method="POST">
         	<th:block th:object="${user}">
