--- a/src/main/resources/templates/edit/add_word_form.html
+++ b/src/main/resources/templates/edit/add_word_form.html
@@ -33,10 +33,10 @@
             <input type="hidden" th:field="*{pageViews}" />
             
 <!-- ***************************************************************** -->    
-            <h1>
-                <input type="text" th:field="*{name}" th:placeholder="'ここに単語名を入力してください。※1～50文字以内'" maxlength="50" required />
-                <small>(読み方：<input type="text" th:field="*{pronunciation}" th:placeholder="'ここに読み方を入力してください。※1～50文字以内'" maxlength="50" />)</small>
-            </h1>
+            <p>
+                <input type="text" class="word-name" th:field="*{name}" th:placeholder="'ここに単語名を入力してください。'" maxlength="50" required />
+                <label class="pronunciation">(読み方：<input type="text" th:field="*{pronunciation}" th:placeholder="'ここに読み方を入力してください。'" maxlength="50" />)</label>
+            </p>
 
             <hr>
 
