--- a/src/main/resources/templates/edit/edit_word_form.html
+++ b/src/main/resources/templates/edit/edit_word_form.html
@@ -33,15 +33,15 @@
     		<input type="hidden" th:field="*{pageViews}" />
     		
 <!-- ***************************************************************** -->	
-			<h1>
+			<p class="word-name">
 				[[*{name}]]
-				<small>(読み方：<input type="text" th:field="*{pronunciation}" />)</small>
-			</h1>
-
+				<label class="pronunciation">(読み方：<input type="text" th:field="*{pronunciation}" />)</label>
+			</p>
+			<p class ="page-views"><span style="font-size: 1.5rem;">[[*{pageViews}]]</span>回閲覧</p>
 			<hr>
 
 			<br>
-			<table border="1">
+			<table class="word-detail-table" border="1">
 				<tr>
 					<th>登録している辞典</th>
 					<td>
@@ -49,7 +49,7 @@
 							<th:block th:if="${dict.id != 99}">
 									<input type="checkbox" name="registeredDictIdList"
 										th:value="${dict.id}"
-										th:checked="${word.registeredDictList.contains(dict)}">[[${status.index + 1}]].[[${dict.name}]]
+										th:checked="${word.registeredDictList.contains(dict)}">[[${dict.name}]]
 	    					</th:block>
 		    			</th:block>
     				</td>
@@ -62,14 +62,14 @@
 				<tr>
 					<th>詳細</th>
 					<td><textarea id="detailedDescription" class="custom-input" th:field="*{detailedDescription}" rows="6"
-							style="width: 300px;"></textarea></td>
+					></textarea></td>
 				</tr>
 				<tr>
 					<th>参照</th>
 					<td><input type="text" class="custom-input" th:field="*{referenceUrl}" /></td>
 				</tr>
 			</table>
-			<input type="submit" value="送信">
+			<input type="submit" value="保存">
 		</form>
 
 		<p>単語登録日：[[*{#temporals.format(registeredAt, 'yyyy/MM/dd
@@ -77,7 +77,6 @@
 		<p>更新日：[[*{#temporals.format(updatedAt, 'yyyy/MM/dd HH:mm:ss')}]]</p>
 		<p>最終閲覧日:[[*{#temporals.format(lastViewAt, 'yyyy/MM/dd
 			HH:mm:ss')}]]</p>
-		<p>[[*{pageViews}]]回閲覧</p>
 	</th:block>
 	<p>
 		<a th:href="@{/mydictionary/show/all}">一覧に戻る</a>
