--- a/src/main/resources/templates/register_user.html
+++ b/src/main/resources/templates/register_user.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>新規ユーザー登録</title>
-    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" th:href="@{/css/login.css}">
 </head>
 <body>
     <div class="register-container">
@@ -14,19 +14,15 @@
         <form th:action="@{/registerUser}" method="POST">
         	<th:block th:object="${newUser}">
 				<div class="form-group">
-					<label for="userName">ユーザー名：</label> 
+					<label for="userName">ユーザー名</label> 
 					<input type="text" th:field="*{userName}" required>
-				</div>
-				<div class="form-group">
-					<label for="password">パスワード：</label> 
+						
+					<label for="password">パスワード</label> 
 					<input type="password" th:field="*{password}" required>
-				</div>
-				<div>
-					<label for="confirmPassword">確認用パスワード:</label> 
-					<input type="password" th:field="*{confirmPassword}" />
 
+					<label for="confirmPassword">確認用パスワード</label> 
+					<input type="password" th:field="*{confirmPassword}" />	
 				</div>
-				<br>
 				<button type="submit">登録する</button>
 			</th:block>
         </form>
