《修正》単語の詳細、リンクを新規タブで表示する

--- a/src/main/resources/templates/word_detail.html
+++ b/src/main/resources/templates/word_detail.html
@@ -38,7 +38,7 @@
 				<tr>
 					<th>参照</th>
 					<td>
-						<a th:href="*{referenceUrl}">[[*{referenceUrl}]]</a>
+						<a th:href="*{referenceUrl}"  target="_blank" rel="noopener noreferrer">[[*{referenceUrl}]]</a>
 					</td>
 				</tr>
 		</table>
