《修正》エラーメッセージの書式をすべて統一

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -86,6 +86,14 @@ td.detailedDescription p {
 	margin-top: 0;
 }
 
+/* エラーメッセージのスタイル */
+.error-message {
+    color: #ff6347; /* エラーメッセージの赤色 */
+    font-size: 1.1em;
+    margin-bottom: 15px;
+}
+
+
 
 
 
