《修正》全頁にフッターを追加

--- a/src/main/resources/templates/edit/add_word_form.html
+++ b/src/main/resources/templates/edit/add_word_form.html
@@ -75,6 +75,7 @@
     <p>
         <a th:href="@{/mydictionary/show/all}">一覧に戻る</a>
     </p>
+    <footer th:insert="~{fragments/parts :: page_footer}"></footer>
 
 </body>
 </html>
