--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -30,5 +30,6 @@
             <a th:href="@{/registerUser}">登録がない方はこちら</a>
         </div>
     </div>
+    <footer th:insert="~{fragments/parts :: page_footer}"></footer>
 </body>
 </html>
