--- a/src/main/resources/templates/word_detail.html
+++ b/src/main/resources/templates/word_detail.html
@@ -47,6 +47,7 @@
 					<p>最終閲覧日:[[*{#temporals.format(lastViewAt, 'yyyy/MM/dd HH:mm:ss')}]]</p>
 	</th:block>	
 	<p><a th:href="@{/mydictionary/show/all}">一覧に戻る</a></p>
-
+	
+	<footer th:insert="~{fragments/parts :: page_footer}"></footer>
 </body>
 </html>
