--- a/src/main/resources/templates/all_words.html
+++ b/src/main/resources/templates/all_words.html
@@ -112,6 +112,6 @@
         </tbody>    
     </table>
 	<!--/****************************************************************************************************/-->
-
+	<footer th:insert="~{fragments/parts :: page_footer}"></footer>
 </body>
 </html>
