--- a/src/main/resources/templates/edit/add_dictionary_form.html
+++ b/src/main/resources/templates/edit/add_dictionary_form.html
@@ -45,6 +45,6 @@
     <p>
         <a th:href="@{/mydictionary/show/all}">一覧に戻る</a>
     </p>
-
+	<footer th:insert="~{fragments/parts :: page_footer}"></footer>
 </body>
 </html>
