--- a/src/main/resources/templates/register_user.html
+++ b/src/main/resources/templates/register_user.html
@@ -28,5 +28,6 @@
         </form>
         <a th:href="@{/login}">ログイン画面に戻る</a>
     </div>
+    <footer th:insert="~{fragments/parts :: page_footer}"></footer>
 </body>
 </html>
