--- a/src/main/resources/templates/edit/add_dictionary_form.html
+++ b/src/main/resources/templates/edit/add_dictionary_form.html
@@ -10,7 +10,7 @@
     <h1>---[[${pageTitle}]]---</h1>
 
     <th:block th:object="${dictionary}">
-        <form th:action="@{/mydictionary/dictionary/add}" method="post">
+        <form th:action="@{/mydictionarys/dictionary/add}" method="post">
         <!-- <form th:action="@{/mydictionary/word/confirm(id=*{id}, name=*{name})}" method="get"> -->
         
         
@@ -39,11 +39,11 @@
                     <td><input type="text" th:field="*{name}" th:placeholder="'20文字以内で入力してください'" maxlength="20" required />辞典</td>
                 </tr>
             </table>
-            <input type="submit" value="送信">
+            <input type="submit" value="登録する">
         </form>
     </th:block>
     <p>
-        <a th:href="@{/mydictionary/show/all}">一覧に戻る</a>
+        <a th:href="@{/mydictionarys/show/all}">一覧に戻る</a>
     </p>
 	<footer th:insert="~{fragments/parts :: page_footer}"></footer>
 </body>
