--- a/src/main/resources/templates/edit/add_word_form.html
+++ b/src/main/resources/templates/edit/add_word_form.html
@@ -13,7 +13,7 @@
     <h1>---[[${pageTitle}]]---</h1>
 
     <th:block th:object="${word}">
-        <form th:action="@{/mydictionary/word/add}" method="post">
+        <form th:action="@{/mydictionarys/word/add}" method="post">
         <!-- <form th:action="@{/mydictionary/word/confirm(id=*{id}, name=*{name})}" method="get"> -->
         
         
@@ -73,7 +73,7 @@
 
     </th:block>
     <p>
-        <a th:href="@{/mydictionary/show/all}">一覧に戻る</a>
+        <a th:href="@{/mydictionarys/show/all}">一覧に戻る</a>
     </p>
     <footer th:insert="~{fragments/parts :: page_footer}"></footer>
 
