--- a/src/main/resources/templates/edit/edit_word_form.html
+++ b/src/main/resources/templates/edit/edit_word_form.html
@@ -12,7 +12,7 @@
 	<h1>---[[${pageTitle}]]---</h1>
 
 	<th:block th:object="${word}">
-		<form th:action="@{/mydictionary/word/register}" method="post">
+		<form th:action="@{/mydictionarys/word/register}" method="post">
 		<!-- <form th:action="@{/mydictionary/word/confirm(id=*{id}, name=*{name})}" method="get"> -->
 		
 		
@@ -79,7 +79,7 @@
 			HH:mm:ss')}]]</p>
 	</th:block>
 	<p>
-		<a th:href="@{/mydictionary/show/all}">一覧に戻る</a>
+		<a th:href="@{/mydictionarys/show/all}">一覧に戻る</a>
 	</p>
 	<footer th:insert="~{fragments/parts :: page_footer}"></footer>
 
