--- a/src/main/resources/templates/word_detail.html
+++ b/src/main/resources/templates/word_detail.html
@@ -46,7 +46,7 @@
 					<p>更新日：[[*{#temporals.format(updatedAt, 'yyyy/MM/dd HH:mm:ss')}]]</p>
 					<p>最終閲覧日:[[*{#temporals.format(lastViewAt, 'yyyy/MM/dd HH:mm:ss')}]]</p>
 	</th:block>	
-	<p><a th:href="@{/mydictionary/show/all}">一覧に戻る</a></p>
+	<p><a th:href="@{/mydictionarys/show/all}">一覧に戻る</a></p>
 	
 	<footer th:insert="~{fragments/parts :: page_footer}"></footer>
 </body>
