--- a/src/main/resources/templates/edit/edit_dictionary_form.html
+++ b/src/main/resources/templates/edit/edit_dictionary_form.html
@@ -10,7 +10,7 @@
     <h1>---[[${pageTitle}]]---</h1>
 
     <th:block th:object="${dict}">
-        <form th:action="@{/mydictionary/dictionary/edit}" method="post">
+        <form th:action="@{/mydictionarys/dictionary/edit}" method="post">
         <!-- <form th:action="@{/mydictionary/word/confirm(id=*{id}, name=*{name})}" method="get"> -->
         
         
@@ -36,7 +36,7 @@
         </form>
     </th:block>
     <p>
-        <a th:href="@{/mydictionary/show/all}">一覧に戻る</a>
+        <a th:href="@{/mydictionarys/show/all}">一覧に戻る</a>
     </p>
     <footer th:insert="~{fragments/parts :: page_footer}"></footer>
 
