--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
         <h1>My辞典ず</h1>
         <p th:if="${errorMessage}" class="error-message" th:text="${errorMessage}"></p>
         <h2 th:if="${statusMessage}" th:text="${statusMessage}"></h2>
-        <form th:action="@{/login}" method="POST">
+        <form th:action="@{/mydictionarys/login}" method="POST">
         	<th:block th:object="${user}">
 				<div class="form-group">
 					<label for="userName">ユーザー名</label> 
@@ -21,13 +21,13 @@
 					<label for="password">パスワード</label> 
 					<input type="password" th:field="*{password}" required>
 				</div>
-				<button type="submit">Login</button>
+				<button type="submit">ログイン</button>
 			</th:block>
         </form>
 
         <!-- 新規登録リンクを追加 -->
         <div class="register-link">
-            <a th:href="@{/registerUser}">登録がない方はこちら</a>
+            <a th:href="@{/mydictionarys/registerUser}">登録がない方はこちら</a>
         </div>
     </div>
     <footer th:insert="~{fragments/parts :: page_footer}"></footer>
